# Breast_Cancer_MLFlow

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: breat_cancer_mlflow.ipynb
src/: utils.py
