[project]
name = "breat-cancer-mlflow"
version = "0.1.0"
description = ""
authors = [
    {name = "SYKAM BHARATH",email = "bharathsykam57@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2,<3)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mlflow (>=3.10.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
